--- a/cmd/simple/templates/404.html
+++ b/cmd/simple/templates/404.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Not Found</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/output.css" rel="stylesheet">
 
 </head>
 
