--- a/cmd/simple/templates/short.html
+++ b/cmd/simple/templates/short.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Shortner</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="/static/output.css" rel="stylesheet">
 </head>
 
 <body>
